[tool.poetry]
name = "pyorbits"
version = "0.1.0"
description = "Orbits in Python and Arcade"
authors = ["Jon Fincher <jfincher42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.13"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
rope = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
